--- a/css/style.less
+++ b/css/style.less
@@ -508,7 +508,7 @@ footer .logo {
 				text-align:center;
 				font-weight:100;
 				.text-center;
-				padding: 20% 0;
+				padding: 20%;
 				position: relative;
 
 				margin: 0;
@@ -523,27 +523,27 @@ footer .logo {
 				width:8%;
 				height:8%;
 
-				bottom:8%;
+				bottom:10%;
 
 				left:50%;
 				margin-left:-4%;
 
-				polyline {
-					-animation: bounce 2s ease infinite;
-					-webkit-animation: bounce 2s ease infinite;
-				}
+				// polyline {
+				// 	-animation: bounce 2s ease infinite;
+				// 	-webkit-animation: bounce 2s ease infinite;
+				// }
 
-				@keyframes bounce {
-					0% { .translate(0, -50%); }
-					50% { .translate(0, 50%); }
-					100% { .translate(0, -50%); }
-				}
+				// @keyframes bounce {
+				// 	0% { .translate(0, -50%); }
+				// 	50% { .translate(0, 50%); }
+				// 	100% { .translate(0, -50%); }
+				// }
 
-				@-webkit-keyframes bounce {
-					0% { .translate(0, -50%); }
-					50% { .translate(0, 50%); }
-					100% { .translate(0, -50%); }
-				}
+				// @-webkit-keyframes bounce {
+				// 	0% { .translate(0, -50%); }
+				// 	50% { .translate(0, 50%); }
+				// 	100% { .translate(0, -50%); }
+				// }
 
 				@media all and (max-width:480px) {
 					width:12%;
@@ -663,7 +663,7 @@ footer .logo {
 			overflow:hidden;
 			position: relative;
 
-
+			width: 100%;
 			
 
 			text-align:center;
