--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer class="card card-half-height">
-  <div class="full-bg fade-gray" style="background-image: url('/images/rock-texture.jpg');"></div>
+  <div class="full-bg fade-gray" style="background-image: url('{{ site.baseurl }}/images/rock-texture.jpg');"></div>
 
 	<div class="container text-center">
     <a href="/" class="logo">
-      <img src="/images/logo.svg" alt="eDen" />
+      <img src="{{ site.baseurl }}/images/logo.svg" alt="eDen" />
     </a>
   </div>
 </footer>
