--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,12 +8,12 @@
       Typekit.load();
     } catch(e) {}
   };</script>
-	<link rel="stylesheet" type="text/css" href="/css/application.css" />
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/application.css" />
 
 
-	<script>window.jQuery || document.write('<script src="/scripts/libs/jquery.min.js"><\/script>')</script>
+	<script>window.jQuery || document.write('<script src="{{ site.baseurl }}/scripts/libs/jquery.min.js"><\/script>')</script>
 
-  <script src="/scripts/bootstrap.js"></script>
+  <script src="{{ site.baseurl }}/scripts/bootstrap.js"></script>
 
 	<link rel="shortcut icon" href="favicon.ico" />
 
