--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand logo white-logo" href="/">
-        <img src="/images/logo.svg" alt="">
+        <img src="{{ site.baseurl }}/images/logo.svg" alt="">
       </a>
       <a class="navbar-brand logo black-logo" href="/">
-        <img src="/images/logo-dark.svg" alt="">
+        <img src="{{ site.baseurl }}/images/logo-dark.svg" alt="">
       </a>
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation">
         <span class="sr-only">Toggle navigation</span>
