Timeline on sponsors page, solar d logo on footer

--- a/_less/blog.less
+++ b/_less/blog.less
@@ -1,3 +1,13 @@
+.blog h1 {
+  font-weight: 700;
+}
+
+.post p, .post li {
+  font-family: @font-family-serif;
+}
+
 .blog p:first-of-type {
   .prose;
+  font-family: @font-family-sans-serif;
 }
+
