--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,11 @@
   <div class="full-bg fade-gray" style="background-image: url('{{ site.baseurl }}/images/rock-texture.jpg');"></div>
 
 	<div class="container text-center">
-    <a href="/" class="logo">
-      <img src="{{ site.baseurl }}/images/logo.svg" alt="eDen" />
-    </a>
+    <span class="pad1x"><a href="{{ site.baseurl }}/" class="logo">
+        <img src="{{ site.baseurl }}/images/logo.svg" alt="eDen" />
+      </a></span>
+    <span class="pad1x"><a href="{{ site.baseurl }}/" class="logo">
+        <img src="{{ site.baseurl }}/images/solar-decathlon-logo-white.svg" alt="eDen" />
+      </a></span>
   </div>
 </footer>
