--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,12 +2,8 @@
 
     <title>Stanford Solar Decathlon 2015</title>
 
-  <script type="text/javascript" src="//use.typekit.net/sky7egk.js"></script>
-  <script type="text/javascript">window.onload = function () {
-    try {
-      Typekit.load();
-    } catch(e) {}
-  };</script>
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Halant:300,400,500,600,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/application.css" />
 
 
