--- a/_less/application.less
+++ b/_less/application.less
@@ -3,6 +3,7 @@
 @import 'buttons';
 @import 'utility';
 @import 'blog';
+@import 'timeline';
 
 html, body {
   height: 100%;
@@ -38,7 +39,8 @@ footer {
   border-top: 20px solid @gray-light;
 
   a {
-    opacity: 0.8;
+    opacity: 0.7;
+    text-decoration: none;
     transition: all 0.2s;
 
     &:hover {
