--- a/css/application.css
+++ b/css/application.css
@@ -6495,7 +6495,7 @@ fieldset[disabled] .btn-outline-danger.active {
   }
 }
 .prose {
-  font-weight: 100;
+  font-weight: 300;
   font-size: 23px;
 }
 @media (min-width: 992px) {
@@ -6559,9 +6559,172 @@ fieldset[disabled] .btn-outline-danger.active {
   padding-left: 100px;
   padding-right: 100px;
 }
+.blog h1 {
+  font-weight: 700;
+}
+.post p,
+.post li {
+  font-family: 'Halant', Georgia, "Times New Roman", Times, serif;
+}
 .blog p:first-of-type {
-  font-weight: 100;
+  font-weight: 300;
   font-size: 23px;
+  font-family: 'Source Sans Pro', source-sans-pro, Helvetica, Arial, sans-serif;
+}
+.timeline {
+  list-style: none;
+  padding: 20px 0 20px;
+  position: relative;
+  margin-bottom: 0;
+}
+.timeline:before {
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  content: " ";
+  width: 3px;
+  background-color: #eeeeee;
+  left: 50%;
+  margin-left: -1.5px;
+}
+.timeline > li {
+  margin-bottom: 20px;
+  position: relative;
+}
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+.timeline > li:after {
+  clear: both;
+}
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+.timeline > li:after {
+  clear: both;
+}
+.timeline > li > .timeline-panel {
+  width: 46%;
+  float: left;
+  border: 1px solid #d4d4d4;
+  border-radius: 3px;
+  padding: 20px;
+  position: relative;
+}
+.timeline > li > .timeline-panel:before {
+  position: absolute;
+  top: 26px;
+  right: -15px;
+  display: inline-block;
+  border-top: 15px solid transparent;
+  border-left: 15px solid #ccc;
+  border-right: 0 solid #ccc;
+  border-bottom: 15px solid transparent;
+  content: " ";
+}
+.timeline > li > .timeline-panel:after {
+  position: absolute;
+  top: 27px;
+  right: -14px;
+  display: inline-block;
+  border-top: 14px solid transparent;
+  border-left: 14px solid #fff;
+  border-right: 0 solid #fff;
+  border-bottom: 14px solid transparent;
+  content: " ";
+}
+.timeline > li > .timeline-badge {
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 1.4em;
+  text-align: center;
+  position: absolute;
+  top: 22px;
+  left: 50%;
+  margin-left: -20px;
+  background-color: #999999;
+  z-index: 100;
+  border-top-right-radius: 50%;
+  border-top-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+}
+.timeline > li.timeline-inverted > .timeline-panel {
+  float: right;
+}
+.timeline > li.timeline-inverted > .timeline-panel:before {
+  border-left-width: 0;
+  border-right-width: 15px;
+  left: -15px;
+  right: auto;
+}
+.timeline > li.timeline-inverted > .timeline-panel:after {
+  border-left-width: 0;
+  border-right-width: 14px;
+  left: -14px;
+  right: auto;
+}
+.timeline-badge.platinum {
+  background-color: #607981 !important;
+}
+.timeline-badge.green {
+  background-color: #7FE36F !important;
+}
+.timeline-badge.gold {
+  background-color: #EDBD2B !important;
+}
+.timeline-badge.silver {
+  background-color: #829aa2 !important;
+}
+.timeline-badge.bronze {
+  background-color: #dbaa76 !important;
+}
+.timeline-title {
+  margin-top: 0;
+  color: inherit;
+}
+.timeline-body > p,
+.timeline-body > ul {
+  margin-bottom: 0;
+}
+.timeline-body > p + p {
+  margin-top: 5px;
+}
+@media (max-width: 767px) {
+  ul.timeline:before {
+    left: 40px;
+  }
+  ul.timeline > li > .timeline-panel {
+    width: calc(100% - 90px);
+    width: -moz-calc(100% - 90px);
+    width: -webkit-calc(100% - 90px);
+  }
+  ul.timeline > li > .timeline-badge {
+    left: 15px;
+    margin-left: 0;
+    top: 22px;
+  }
+  ul.timeline > li > .timeline-panel {
+    float: right;
+  }
+  ul.timeline > li > .timeline-panel:before {
+    border-left-width: 0;
+    border-right-width: 15px;
+    left: -15px;
+    right: auto;
+  }
+  ul.timeline > li > .timeline-panel:after {
+    border-left-width: 0;
+    border-right-width: 14px;
+    left: -14px;
+    right: auto;
+  }
 }
 html,
 body {
@@ -6593,7 +6756,8 @@ footer {
   border-top: 20px solid #829aa2;
 }
 footer a {
-  opacity: 0.8;
+  opacity: 0.7;
+  text-decoration: none;
   transition: all 0.2s;
 }
 footer a:hover {
