Fix link to doe site

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
     <span class="pad1x"><a href="{{ site.baseurl }}/" class="logo">
         <img src="{{ site.baseurl }}/images/logo.svg" alt="eDen" />
       </a></span>
-    <span class="pad1x"><a href="{{ site.baseurl }}/" class="logo">
+    <span class="pad1x"><a href="http://www.solardecathlon.gov" class="logo">
         <img src="{{ site.baseurl }}/images/solar-decathlon-logo-white.svg" alt="eDen" />
       </a></span>
   </div>
